[package]
name = "disperror"
version = "0.1.0"
edition = "2021"
include = ["/src", "LICENSE", "README.md"]
repository = "https://github.com/PRO-2684/disperror"
license = "MIT"
readme = "README.md"
description = "`Display`ing errors instead of `Debug`ging them when returned from `main`."
keywords = ["error", "main", "print", "debug", "display"]

[dependencies]
